@@ -1,3 +1,11 @@
+2003/12/16 00:02 (+0100) kaffeetisch
+
+	* xs/GnomeConfig.xs
+	* xs/GnomeI18N.xs
+	* xs/GnomeIconLookup.xs
+	* xs/GnomeIconTheme.xs
+	* xs/GnomeProgram.xs: Add API documentation.
+
 2003/12/15 01:12 (+0100) kaffeetisch
 
 	A t/TestBoilerplate
